DATAGO-142122: Added Logging, packed config validation into a single test class, moved non data-path test to in-JVM for faster testing, etc.